# feed-forward-network

./: Cargo.toml  Makefile  README.md
src/: config.rs  main.rs
src/data/: dataset.rs  mod.rs  ndarray.rs
src/nn/: activation.rs  linear.rs  loss.rs  mod.rs  network.rs  ops.rs  optimizer.rs
