[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
csv = "^1.3.0"
once_cell = "1.18.0"
rand = "^0.8.5"
rand_distr = "^0.4.3"
rayon = "1.8.0"